<resources>
    <string name="resc_res_0x7f0f0000">Navigate home</string>
    <string name="resc_res_0x7f0f0001">Navigate up</string>
    <string name="resc_res_0x7f0f0002">More options</string>
    <string name="resc_res_0x7f0f0003">Done</string>
    <string name="resc_res_0x7f0f0004">See all</string>
    <string name="resc_res_0x7f0f0005">Choose an app</string>
    <string name="resc_res_0x7f0f0006">OFF</string>
    <string name="resc_res_0x7f0f0007">ON</string>
    <string name="resc_res_0x7f0f0008">Alt+</string>
    <string name="resc_res_0x7f0f0009">Ctrl+</string>
    <string name="resc_res_0x7f0f000a">delete</string>
    <string name="resc_res_0x7f0f000b">enter</string>
    <string name="resc_res_0x7f0f000c">Function+</string>
    <string name="resc_res_0x7f0f000d">Meta+</string>
    <string name="resc_res_0x7f0f000e">Shift+</string>
    <string name="resc_res_0x7f0f000f">space</string>
    <string name="resc_res_0x7f0f0010">Sym+</string>
    <string name="resc_res_0x7f0f0011">Menu+</string>
    <string name="resc_res_0x7f0f0012">Search…</string>
    <string name="resc_res_0x7f0f0013">Clear query</string>
    <string name="resc_res_0x7f0f0014">Search query</string>
    <string name="resc_res_0x7f0f0015">Search</string>
    <string name="resc_res_0x7f0f0016">Submit query</string>
    <string name="resc_res_0x7f0f0017">Voice search</string>
    <string name="resc_res_0x7f0f0018">Share with</string>
    <string name="resc_res_0x7f0f0019">Share with %s</string>
    <string name="resc_res_0x7f0f001a">Collapse</string>
    <string name="resc_res_0x7f0f001b">Add config</string>
    <string name="resc_res_0x7f0f001c">Add .cfg</string>
    <string name="resc_res_0x7f0f001d">Importing...</string>
    <string name="resc_res_0x7f0f001e">androidx.startup</string>
    <string name="resc_res_0x7f0f001f">Zenin External</string>
    <string name="resc_res_0x7f0f0020">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="resc_res_0x7f0f0021">Back</string>
    <string name="resc_res_0x7f0f0022">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="resc_res_0x7f0f0023">Collapse the bottom sheet</string>
    <string name="resc_res_0x7f0f0024">Expand the bottom sheet</string>
    <string name="resc_res_0x7f0f0025">Expand halfway</string>
    <string name="resc_res_0x7f0f0026">Drag handle double-tapped</string>
    <string name="resc_res_0x7f0f0027">Drag handle</string>
    <string name="resc_res_0x7f0f0028">Answer</string>
    <string name="resc_res_0x7f0f0029">Video</string>
    <string name="resc_res_0x7f0f002a">Decline</string>
    <string name="resc_res_0x7f0f002b">Hang Up</string>
    <string name="resc_res_0x7f0f002c">Incoming call</string>
    <string name="resc_res_0x7f0f002d">Ongoing call</string>
    <string name="resc_res_0x7f0f002e">Screening an incoming call</string>
    <string name="resc_res_0x7f0f002f">Cancel</string>
    <string name="resc_res_0x7f0f0030">CFG</string>
    <string name="resc_res_0x7f0f0031">Characters entered %1$d of %2$d</string>
    <string name="resc_res_0x7f0f0032">Character limit exceeded %1$d of %2$d</string>
    <string name="resc_res_0x7f0f0033">%1$d/%2$d</string>
    <string name="resc_res_0x7f0f0034">Please select a .cfg file</string>
    <string name="resc_res_0x7f0f0035">Clear text</string>
    <string name="resc_res_0x7f0f0036">Close</string>
    <string name="resc_res_0x7f0f0037">Added: %1$s</string>
    <string name="resc_res_0x7f0f0038">Failed to delete config</string>
    <string name="resc_res_0x7f0f0039">Config deleted</string>
    <string name="resc_res_0x7f0f003a">A file with this name already exists</string>
    <string name="resc_res_0x7f0f003b">Failed to add config</string>
    <string name="resc_res_0x7f0f003c">Config added</string>
    <string name="resc_res_0x7f0f003d">Failed to rename config</string>
    <string name="resc_res_0x7f0f003e">Config renamed</string>
    <string name="resc_res_0x7f0f003f">Configs: 0</string>
    <string name="resc_res_0x7f0f0040">Configs: %1$d</string>
    <string name="resc_res_0x7f0f0041">Manage your .cfg files</string>
    <string name="resc_res_0x7f0f0042">No configs found. Add your first .cfg using the button below.</string>
    <string name="resc_res_0x7f0f0043">Destination folder</string>
    <string name="resc_res_0x7f0f0044">/sdcard/Zenin/cfg/</string>
    <string name="resc_res_0x7f0f0045">Configs</string>
    <string name="resc_res_0x7f0f0046">Delete</string>
    <string name="resc_res_0x7f0f0047">File %1$s will be deleted permanently.</string>
    <string name="resc_res_0x7f0f0048">Delete config?</string>
    <string name="resc_res_0x7f0f0049">Error: invalid</string>
    <string name="resc_res_0x7f0f004a">Error</string>
    <string name="resc_res_0x7f0f004b">Show dropdown menu</string>
    <string name="resc_res_0x7f0f004c">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="resc_res_0x7f0f004d">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="resc_res_0x7f0f004e">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="resc_res_0x7f0f004f">Dialog Icon</string>
    <string name="resc_res_0x7f0f0050">Key format must be: ZE-********</string>
    <string name="resc_res_0x7f0f0051">Invalid key</string>
    <string name="resc_res_0x7f0f0052">Tab</string>
    <string name="resc_res_0x7f0f0053">Enter key</string>
    <string name="resc_res_0x7f0f0054">Launch Standoff 2, then press Start.</string>
    <string name="resc_res_0x7f0f0055">Authorization</string>
    <string name="resc_res_0x7f0f0056">%1$s%2$s</string>
    <string name="resc_res_0x7f0f0057">sans-serif-medium</string>
    <string name="resc_res_0x7f0f0058">sans-serif</string>
    <string name="resc_res_0x7f0f0059">sans-serif-medium</string>
    <string name="resc_res_0x7f0f005a">sans-serif</string>
    <string name="resc_res_0x7f0f005b">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="resc_res_0x7f0f005c">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="resc_res_0x7f0f005d">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="resc_res_0x7f0f005e">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="resc_res_0x7f0f005f">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="resc_res_0x7f0f0060">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="resc_res_0x7f0f0061">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="resc_res_0x7f0f0062">cubic-bezier(0, 0, 1, 1)</string>
    <string name="resc_res_0x7f0f0063">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="resc_res_0x7f0f0064">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="resc_res_0x7f0f0065">cubic-bezier(0, 0, 0, 1)</string>
    <string name="resc_res_0x7f0f0066">:</string>
    <string name="resc_res_0x7f0f0067">Select AM or PM</string>
    <string name="resc_res_0x7f0f0068">%1$s hours</string>
    <string name="resc_res_0x7f0f0069">Select hour</string>
    <string name="resc_res_0x7f0f006a">%1$s o\'clock</string>
    <string name="resc_res_0x7f0f006b">Select minutes</string>
    <string name="resc_res_0x7f0f006c">%1$s minutes</string>
    <string name="resc_res_0x7f0f006d">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="resc_res_0x7f0f006e">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="resc_res_0x7f0f006f">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="resc_res_0x7f0f0070">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="resc_res_0x7f0f0071">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="resc_res_0x7f0f0072">Range end</string>
    <string name="resc_res_0x7f0f0073">Range start</string>
    <string name="resc_res_0x7f0f0074">Value</string>
    <string name="resc_res_0x7f0f0075">AM</string>
    <string name="resc_res_0x7f0f0076">Switch to clock mode for the time input.</string>
    <string name="resc_res_0x7f0f0077">Hour</string>
    <string name="resc_res_0x7f0f0078">Minute</string>
    <string name="resc_res_0x7f0f0079">PM</string>
    <string name="resc_res_0x7f0f007a">Select time</string>
    <string name="resc_res_0x7f0f007b">Switch to text input mode for the time input.</string>
    <string name="resc_res_0x7f0f007c">New notification</string>
    <string name="resc_res_0x7f0f007d">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="resc_res_0x7f0f007e">icon</string>
    <string name="resc_res_0x7f0f007f">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="resc_res_0x7f0f0080">icon path</string>
    <string name="resc_res_0x7f0f0081">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="resc_res_0x7f0f0082">button</string>
    <string name="resc_res_0x7f0f0083">button path</string>
    <string name="resc_res_0x7f0f0084">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="resc_res_0x7f0f0085">Checked</string>
    <string name="resc_res_0x7f0f0086">Partially checked</string>
    <string name="resc_res_0x7f0f0087">Not checked</string>
    <string name="resc_res_0x7f0f0088">Remove %1$s</string>
    <string name="resc_res_0x7f0f0089">More than %1$d new notifications</string>
    <string name="resc_res_0x7f0f008a">%1$d%2$s</string>
    <string name="resc_res_0x7f0f008b">Change to next month</string>
    <string name="resc_res_0x7f0f008c">Change to previous month</string>
    <string name="resc_res_0x7f0f008d">Start date selection: %1$s – End date selection: %2$s</string>
    <string name="resc_res_0x7f0f008e">Current selection: %1$s</string>
    <string name="resc_res_0x7f0f008f">none</string>
    <string name="resc_res_0x7f0f0090">Cancel</string>
    <string name="resc_res_0x7f0f0091">OK</string>
    <string name="resc_res_0x7f0f0092">%1$s</string>
    <string name="resc_res_0x7f0f0093">Select Date</string>
    <string name="resc_res_0x7f0f0094">Selected date</string>
    <string name="resc_res_0x7f0f0095">%1$s</string>
    <string name="resc_res_0x7f0f0096">End date %1$s</string>
    <string name="resc_res_0x7f0f0097">Invalid format.</string>
    <string name="resc_res_0x7f0f0098">Example: %1$s</string>
    <string name="resc_res_0x7f0f0099">Use: %1$s</string>
    <string name="resc_res_0x7f0f009a">Invalid range.</string>
    <string name="resc_res_0x7f0f009b">Navigate to current year %1$d</string>
    <string name="resc_res_0x7f0f009c">Navigate to year %1$d</string>
    <string name="resc_res_0x7f0f009d">Out of range: %1$s</string>
    <string name="resc_res_0x7f0f009e">Start date – %1$s</string>
    <string name="resc_res_0x7f0f009f">%1$s – End date</string>
    <string name="resc_res_0x7f0f00a0">%1$s – %2$s</string>
    <string name="resc_res_0x7f0f00a1">Select Range</string>
    <string name="resc_res_0x7f0f00a2">Start date – End date</string>
    <string name="resc_res_0x7f0f00a3">Save</string>
    <string name="resc_res_0x7f0f00a4">Start date %1$s</string>
    <string name="resc_res_0x7f0f00a5">Date</string>
    <string name="resc_res_0x7f0f00a6">End date</string>
    <string name="resc_res_0x7f0f00a7">Start date</string>
    <string name="resc_res_0x7f0f00a8">d</string>
    <string name="resc_res_0x7f0f00a9">m</string>
    <string name="resc_res_0x7f0f00aa">y</string>
    <string name="resc_res_0x7f0f00ab">Today %1$s</string>
    <string name="resc_res_0x7f0f00ba">Open Configs</string>
    <string name="resc_res_0x7f0f00bb">Overlay</string>
    <string name="resc_res_0x7f0f00c1">Refresh</string>
    <string name="resc_res_0x7f0f00c5">Loader runs in root mode. Configs are managed in /sdcard/Zenin/cfg/.</string>
    <string name="resc_res_0x7f0f00c6">Safe mode</string>
    <string name="resc_res_0x7f0f00ce">Start</string>
</resources>