<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/resc_res_0x7f07007a"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/resc_res_0x7f090085"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0"
        app:layout_constraintWidth_max="640dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="2dp"
            style="@style/resc_res_0x7f10046f">
            <LinearLayout
                android:orientation="vertical"
                android:padding="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:textAppearance="@style/resc_res_0x7f1001ef"
                            android:textColor="@color/resc_res_0x7f050315"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resc_res_0x7f0f0045"/>
                        <TextView
                            android:textAppearance="@style/resc_res_0x7f1001e8"
                            android:textColor="@color/resc_res_0x7f050318"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/resc_res_0x7f0f0041"/>
                    </LinearLayout>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resc_res_0x7f090067"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resc_res_0x7f0f0036"
                        style="@style/resc_res_0x7f100470"/>
                </LinearLayout>
                <TextView
                    android:textAppearance="@style/resc_res_0x7f1001f0"
                    android:textColor="@color/resc_res_0x7f050019"
                    android:id="@+id/resc_res_0x7f0901dc"
                    android:background="@drawable/resc_res_0x7f070079"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/resc_res_0x7f0f003f"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="1dp"
            style="@style/resc_res_0x7f10046f">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/resc_res_0x7f1001f0"
                    android:textColor="@color/resc_res_0x7f050318"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resc_res_0x7f0f0043"/>
                <TextView
                    android:textAppearance="@style/resc_res_0x7f1001e8"
                    android:textColor="@color/resc_res_0x7f050315"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/resc_res_0x7f0f0044"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resc_res_0x7f090065"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/resc_res_0x7f0f001b"
                        android:layout_weight="1"
                        style="@style/resc_res_0x7f100473"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resc_res_0x7f09006b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resc_res_0x7f0f00c1"
                        android:layout_marginStart="10dp"
                        style="@style/resc_res_0x7f100472"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_weight="1">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="24dp"
                app:cardElevation="1dp"
                style="@style/resc_res_0x7f10046f">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/resc_res_0x7f090087"
                        android:padding="12dp"
                        android:clipToPadding="false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/resc_res_0x7f090086"
                        android:padding="28dp"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textAppearance="@style/resc_res_0x7f1001f9"
                            android:textColor="@color/resc_res_0x7f050019"
                            android:background="@drawable/resc_res_0x7f070079"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resc_res_0x7f0f0030"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"/>
                        <TextView
                            android:textAppearance="@style/resc_res_0x7f1001e7"
                            android:textColor="@color/resc_res_0x7f050318"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/resc_res_0x7f0f0042"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/resc_res_0x7f090066"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:text="@string/resc_res_0x7f0f001c"
                            style="@style/resc_res_0x7f100472"/>
                    </LinearLayout>
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
