<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/resc_res_0x7f07007a"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/resc_res_0x7f090105"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="0"
            app:layout_constraintEnd_toEndOf="0"
            app:layout_constraintStart_toStartOf="0"
            app:layout_constraintTop_toTopOf="0"
            app:layout_constraintVertical_bias="0.48"
            app:layout_constraintWidth_max="560dp">
            <TextView
                android:textAppearance="@style/resc_res_0x7f1001ee"
                android:textColor="@color/resc_res_0x7f050315"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resc_res_0x7f0f001f"
                android:textAlignment="center"/>
            <TextView
                android:textAppearance="@style/resc_res_0x7f1001e7"
                android:textColor="@color/resc_res_0x7f050318"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/resc_res_0x7f0f0054"
                android:textAlignment="center"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                style="@style/resc_res_0x7f10046f">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="@style/resc_res_0x7f1001f7"
                        android:textColor="@color/resc_res_0x7f050315"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resc_res_0x7f0f0055"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/resc_res_0x7f0900fa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/resc_res_0x7f0f0053"
                        app:boxCornerRadiusBottomEnd="18dp"
                        app:boxCornerRadiusBottomStart="18dp"
                        app:boxCornerRadiusTopEnd="18dp"
                        app:boxCornerRadiusTopStart="18dp"
                        style="@style/resc_res_0x7f100122">
                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/resc_res_0x7f050315"
                            android:textColorHint="@color/resc_res_0x7f050316"
                            android:id="@+id/resc_res_0x7f0900f9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:textAppearance="@style/resc_res_0x7f1001f0"
                        android:textColor="@color/resc_res_0x7f050318"
                        android:id="@+id/resc_res_0x7f0901de"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="UI Scale: 1.00"/>
                    <com.google.android.material.slider.Slider
                        android:value="1"
                        android:id="@+id/resc_res_0x7f090190"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:valueFrom="1"
                        android:valueTo="2.5"
                        app:labelBehavior="2"
                        app:thumbTint="@color/resc_res_0x7f050019"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:id="@+id/resc_res_0x7f090188"
                            android:focusable="true"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:foreground="?attr/resc_res_0x7f0303b9"
                            android:minHeight="52dp">
                            <TextView
                                android:textAppearance="@style/resc_res_0x7f1001e7"
                                android:textColor="@color/resc_res_0x7f050318"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/resc_res_0x7f0f00bb"
                                android:includeFontPadding="false"
                                android:layout_weight="1"/>
                            <com.google.android.material.materialswitch.MaterialSwitch
                                android:id="@+id/resc_res_0x7f090167"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:thumbTint="@color/resc_res_0x7f050309"
                                app:trackTint="@color/resc_res_0x7f050312"/>
                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:id="@+id/resc_res_0x7f090189"
                            android:focusable="true"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:foreground="?attr/resc_res_0x7f0303b9"
                            android:minHeight="52dp">
                            <TextView
                                android:textAppearance="@style/resc_res_0x7f1001e7"
                                android:textColor="@color/resc_res_0x7f050318"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/resc_res_0x7f0f00c6"
                                android:includeFontPadding="false"
                                android:layout_weight="1"/>
                            <com.google.android.material.materialswitch.MaterialSwitch
                                android:id="@+id/resc_res_0x7f09018b"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:thumbTint="@color/resc_res_0x7f050309"
                                app:trackTint="@color/resc_res_0x7f050312"/>
                        </LinearLayout>
                    </LinearLayout>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resc_res_0x7f09006d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/resc_res_0x7f0f00ce"
                        style="@style/resc_res_0x7f100473"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resc_res_0x7f090069"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/resc_res_0x7f0f00ba"
                        style="@style/resc_res_0x7f100474"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                style="@style/resc_res_0x7f10046f">
                <TextView
                    android:textAppearance="@style/resc_res_0x7f1001e8"
                    android:textColor="@color/resc_res_0x7f050318"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resc_res_0x7f0f00c5"
                    android:textAlignment="center"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
